Import of JIMI/Statistics-QuickMedian-0.02 from CPAN.
gitpan-cpan-distribution: Statistics-QuickMedian
gitpan-cpan-version:      0.02
gitpan-cpan-path:         JIMI/Statistics-QuickMedian-0.02.tar.gz
gitpan-cpan-author:       JIMI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,16 +1,13 @@
 Statistics-QuickMedian
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This is a Perl Perl module implementing CAR Hoare's Quick median 
+Estimator
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+CHANGES
 
+v0.02	2013-08-19	Updated POD and README files
+
+v0.01	2013-08-15	Wrote the thing
 
 INSTALLATION
 
@@ -82,4 +79,3 @@ YOUR LOCAL LAW. UNLESS REQUIRED BY LAW, NO COPYRIGHT HOLDER OR
 CONTRIBUTOR WILL BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, OR
 CONSEQUENTIAL DAMAGES ARISING IN ANY WAY OUT OF THE USE OF THE PACKAGE,
 EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
