Import of JIMI/Statistics-QuickMedian-0.03 from CPAN.
gitpan-cpan-distribution: Statistics-QuickMedian
gitpan-cpan-version:      0.03
gitpan-cpan-path:         JIMI/Statistics-QuickMedian-0.03.tar.gz
gitpan-cpan-author:       JIMI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ Estimator
 
 CHANGES
 
+v0.03	2013-08-19	Exporter bugfix
+
 v0.02	2013-08-19	Updated POD and README files
 
 v0.01	2013-08-15	Wrote the thing
